# everythingGRID-compound

Android Project/: settings.gradle
Android Project/app/: build.gradle
Android Project/app/src/androidTest/java/sh/anshu/testwasm/: ExampleInstrumentedTest.java
Android Project/app/src/main/: AndroidManifest.xml
Android Project/app/src/main/assets/nodejs-project/: cert.pem  key.pem  main.js  package-lock.json  package.json
Android Project/app/src/main/assets/nodejs-project/static/: index.html  index.js  test_application.wasm
Android Project/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Android Project/app/src/main/java/sh/anshu/testwasm/: MainActivity.java  NodeBackgroundTask.java  SocketServer.java
Android Project/app/src/main/res/layout/: activity_main.xml
Android Project/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
Android Project/app/src/main/res/values-night/: themes.xml
Android Project/gradle/wrapper/: gradle-wrapper.properties
N-Body Client Drawer/: .gitignore  package-lock.json  package.json  webpack.config.js
N-Body Client Drawer/src/: Camera.ts  Mesh.ts  Shader.ts  index.ts
N-Body Dispatch Server/: .gitignore  cert.pem  key.pem  package-lock.json  package.json  server.ts
N-Body Dispatch Server/src/buffers/: index.d.ts  stash.ts
N-Body Dispatch Server/src/stages/: stages.ts
N-Body Dispatch Server/src/websockets/: index.d.ts  server.ts  utils.ts
WASM Application/: .gitignore  CMakeLists.txt  main.cpp
WASM Application/server/: localhost.pem  serve.py  test_application.js
(+1 files in other folders)
